--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="./favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
@@ -22,6 +22,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script defer type="module" src="/src/main.tsx"></script>
+    <script defer type="module" src="./src/main.tsx"></script>
   </body>
 </html>
